[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "disc-scrape"
description = "Download Discourse thread posts as raw Markdown, with caching, for LLM consumption"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
